apply plugin: 'java'
apply plugin: 'eclipse'

version = '1.0.0'
sourceCompatibility = 1.8

repositories {
    maven { url 'https://jitpack.io' }
    mavenCentral()
}

dependencies {
    implementation('com.github.woowacourse-projects:mission-utils:1.0.0')
}

test {
    useJUnitPlatform()
}
